# wddl

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  mxnet_wddl  mxnet_wddl.cbp
include/: feature.h  timer.h  wddl.h
model/: wddl_param_120.ckpt  wddl_param_160.ckpt  wddl_param_200.ckpt  wddl_param_40.ckpt  wddl_param_80.ckpt
src/: feature.cpp  main.cpp  timer.cpp  wddl.cpp
